--- a/Mom to be/Mom to be/calender2.html
+++ b/Mom to be/Mom to be/calender2.html
@@ -3,9 +3,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>About Us</title>
+  <title>Appointment Booking</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -17,9 +16,14 @@
       }
     });
   </script>
+  <script>
+function goBack() {
+    window.history.back()
+}
+</script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/w.png">
-  <link rel="apple-touch-icon" href="images/w.png">
+  <link rel="shortcut icon" type="image/x-icon" href="images/logoStandford32.ico">
+  <link rel="apple-touch-icon" href="images/logoStandford32.ico">
 
   <link href="css/ionicons.min.css" rel="stylesheet" type="text/css" />
 </head>
@@ -27,31 +31,56 @@
   <section class="w-section mobile-wrapper">
 
     <div class="page-content" id="main-stack">
-      <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-easing="ease-out-quint" data-no-scroll="1">
+      <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-no-scroll="1" data-easing="ease-out-quint">
         <div class="w-container">
           <nav class="w-nav-menu nav-menu" role="navigation">
             <div class="nav-menu-header">
-              <div class="logo">MOM TO BE</div>
-              <div class="slogan">A Baby Is A Little Bit Of<br/>Heaven On Earth</div>
+              <div class="logo">Washington</div>
+              <div class="slogan">All you need is here.</div>
             </div>
             <a class="w-clearfix w-inline-block nav-menu-link" href="index.html" data-load="1">
               <div class="icon-list-menu">
                 <div class="icon ion-ios-home-outline"></div>
               </div>
-              <div class="nav-menu-titles">HOME</div>
+              <div class="nav-menu-titles">Splash Screen</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="Profile.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="login.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-person-outline"></div>
+                <div class="icon ion-ios-download-outline"></div>
               </div>
-              <div class="nav-menu-titles">Profile</div>
+              <div class="nav-menu-titles">Login</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="report.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="signup.html" data-load="1">
+              <div class="icon-list-menu">
+                <div class="icon ion-ios-cloud-upload-outline"></div>
+              </div>
+              <div class="nav-menu-titles">Sign Up</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="forgot.html" data-load="1">
+              <div class="icon-list-menu">
+                <div class="icon ion-ios-unlocked-outline"></div>
+              </div>
+              <div class="nav-menu-titles">Remember Password</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="todo-list.html" data-load="1">
               <div class="icon-list-menu">
                 <div class="icon ion-ios-list-outline"></div>
               </div>
-              <div class="nav-menu-titles">Reports</div>
-              <div class="nav-menu-text-right">1</div>
+              <div class="nav-menu-titles">To Do List</div>
+              <div class="nav-menu-text-right">8</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="addnew.html" data-load="1">
+              <div class="icon-list-menu">
+                <div class="icon ion-ios-checkmark-outline"></div>
+              </div>
+              <div class="nav-menu-titles">New To Do</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="messages.html" data-load="1">
+              <div class="icon-list-menu">
+                <div class="icon ion-ios-albums-outline"></div>
+              </div>
+              <div class="nav-menu-titles">Messages</div>
+              <div class="nav-menu-text-right">8</div>
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link" href="chat.html" data-load="1">
               <div class="icon-list-menu">
@@ -59,55 +88,50 @@
               </div>
               <div class="nav-menu-titles">Chat</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="notification.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="groups.html" data-load="1">
               <div class="icon-list-menu">
-                <div><img src="icons/alarm.png"></div>
+                <div class="icon ion-ios-keypad-outline"></div>
               </div>
-              <div class="nav-menu-titles">Notifications</div>
-              <div class="nav-menu-text-right">5</div>
+              <div class="nav-menu-titles">News Groups</div>
+              <div class="nav-menu-text-right">12</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="articles.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="news.html" data-load="1">
               <div class="icon-list-menu">
                 <div class="icon ion-ios-paper-outline"></div>
               </div>
-              <div class="nav-menu-titles">Articles</div>
-              <div class="nav-menu-text-right">3</div>
+              <div class="nav-menu-titles">News List</div>
+              <div class="nav-menu-text-right">14</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="medicine.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="newitem.html" data-load="1">
               <div class="icon-list-menu">
-                <div><img src="icons/medi.png"></div>
+                <div class="icon ion-ios-compose-outline"></div>
               </div>
-              <div class="nav-menu-titles">My Medicine</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="Doctor.html" data-load="1">
-              <div class="icon-list-menu">
-                <div><img src="icons/doctor.png"></div>
-              </div>
-              <div class="nav-menu-titles">Your Doctor</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="Stages.html" data-load="1">
-              <div class="icon-list-menu">
-                <div><img src="icons/stages.png"></div>
-              </div>
-              <div class="nav-menu-titles">Pregnancy Stages</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="calender2.html" data-load="1">
-              <div class="icon-list-menu">
-                <div><img src="icons/calendar.png"></div>
-              </div>
-              <div class="nav-menu-titles">Appointments</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="Location.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-location-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Location</div>
+              <div class="nav-menu-titles">News Post</div>
+              <div class="nav-menu-text-right">14</div>
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link" href="about-us.html" data-load="1">
               <div class="icon-list-menu">
-              <div class="icon ion-ios-gear-outline"></div>
+                <div class="icon ion-ios-person-outline"></div>
               </div>
               <div class="nav-menu-titles">About the App</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="maps.html" data-load="1">
+              <div class="icon-list-menu">
+                <div class="icon ion-ios-location-outline"></div>
+              </div>
+              <div class="nav-menu-titles">Maps</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="elements.html" data-load="1">
+              <div class="icon-list-menu">
+                <div class="icon ion-ios-box-outline"></div>
+              </div>
+              <div class="nav-menu-titles">Elements</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="settings.html" data-load="1">
+              <div class="icon-list-menu">
+                <div class="icon ion-ios-gear-outline"></div>
+              </div>
+              <div class="nav-menu-titles">Settings</div>
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link last" href="terms.html" data-load="1">
               <div class="icon-list-menu">
@@ -120,55 +144,61 @@
             <div class="separator-bottom"></div>
           </nav>
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">&nbsp;</div>
-          <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
-            <div class="navbar-button-icon home-icon">
-              <div class="bar-home-icon"></div>
-              <div class="bar-home-icon"></div>
-              <div class="bar-home-icon"></div>
-            </div>
+          <a class="w-inline-block navbar-button"  onclick="goBack()" data-load="1">
+            <div class="navbar-button-icon icon ion-ios-arrow-thin-left"></div>
+          </a>
+        </div>
           </div>
         </div>
       </div>
-      <div class="body padding">
-
-                <div class="row">
-
-                <hr>
-                <div class="row">
-                  <div class="col-xss-4">
-                    <div id="glob-data" data-toggle="calendar"></div>
-                  </div>
-                </div>
-                </div>
-                <br>
-                <form method="post" action="calendar.php" >
-                <center><input type="submit" value="Send"></center>
-                <center><input type="button" value="back" href="history.go(-1);"></center>
-
-                <br>
-          </form>
+      <div class="body">
+        <div class="news-container item-new">
+          <div>
+            <div class="grey-header">
+              <h2 class="grey-heading-title">Appointment Booking</h2>
             </div>
-        </div>
+
+            <div class="container">
+
+              <div class="row">
+
+              <hr>
+              <div class="row">
+                <div class="col-xss-4">
+                  <div id="glob-data" data-toggle="calendar"></div>
+                </div>
+              </div>
+              </div>
+              <br>
+              <form method="post" >
+              <center><input type="submit" value="Send"></center>
+              <br>
+        </form>
+          </div>
       </div>
-      <div class="page-content loading-mask" id="new-stack">
-        <div class="loading-icon">
-          <div class="navbar-button-icon icon ion-load-d"></div>
-        </div>
+    </div>
+    <div class="page-content loading-mask" id="new-stack">
+      <div class="loading-icon">
+        <div class="navbar-button-icon icon ion-load-d"></div>
       </div>
-      <div class="shadow-layer"></div>
-    </section>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/dateTimePicker.min.js"></script>
-    <script type="text/javascript">
-    $(document).ready(function()
+    </div>
+    <div class="shadow-layer"></div>
+  </section>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/dateTimePicker.min.js"></script>
+  <script type="text/javascript">
+  $(document).ready(function()
+  {
+
+
+    $('#glob-data').calendar(
     {
-
-
-      $('#glob-data').calendar(
-      {
-        unavailable: ['*-*-20', '*-*-10']
-      });
-
+      unavailable: ['*-*-20', '*-*-10']
     });
-    </script>
+
+  });
+  </script>
+
+
+  </body>
+  </html>
