--- a/Mom to be/Mom to be/index.html
+++ b/Mom to be/Mom to be/index.html
@@ -27,6 +27,7 @@ while($row=mysql_fetch_array($result))
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
+  <script src="jquery.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="images/W.png">
   <link rel="apple-touch-icon" href="images/W.png">
 
