--- a/Mom to be/Mom to be/report.html
+++ b/Mom to be/Mom to be/report.html
@@ -30,95 +30,95 @@
       <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-easing="ease-out-quint" data-no-scroll="1">
         <div class="w-container">
           <nav class="w-nav-menu nav-menu" role="navigation">
-            <div class="nav-menu-header">
-              <div class="logo">MOM TO BE</div>
-              <div class="slogan">A Baby Is A Little Bit Of<br/>Heaven On Earth</div>
-            </div>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="index.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-home-outline"></div>
+              <div class="nav-menu-header">
+                <div class="logo">MOM TO BE</div>
+                <div class="slogan">A Baby Is A Little Bit Of<br/>Heaven On Earth</div>
               </div>
-              <div class="nav-menu-titles">HOME</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="Profile.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-person-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Profile</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="report.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-list-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Reports</div>
-              <div class="nav-menu-text-right">1</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="chat.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-chatboxes-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Chat</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="notification.html" data-load="1">
-              <div class="icon-list-menu">
-                <div><img src="icons/alarm.png"></div>
-              </div>
-              <div class="nav-menu-titles">Notifications</div>
-              <div class="nav-menu-text-right">5</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="articles.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-paper-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Articles</div>
-              <div class="nav-menu-text-right">3</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="medicine.html" data-load="1">
-              <div class="icon-list-menu">
-                <div><img src="icons/medi.png"></div>
-              </div>
-              <div class="nav-menu-titles">My Medicine</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="Doctor.html" data-load="1">
-              <div class="icon-list-menu">
-                <div><img src="icons/doctor.png"></div>
-              </div>
-              <div class="nav-menu-titles">Your Doctor</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="Stages.html" data-load="1">
-              <div class="icon-list-menu">
-                <div><img src="icons/stages.png"></div>
-              </div>
-              <div class="nav-menu-titles">Pregnancy Stages</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="calender2.html" data-load="1">
-              <div class="icon-list-menu">
-                <div><img src="icons/calendar.png"></div>
-              </div>
-              <div class="nav-menu-titles">Appointments</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="Location.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-location-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Location</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="about-us.html" data-load="1">
-              <div class="icon-list-menu">
-              <div class="icon ion-ios-gear-outline"></div>
-              </div>
-              <div class="nav-menu-titles">About the App</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link last" href="terms.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-bookmarks-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Terms and Conditions</div>
-            </a>
-            <div class="separator-bottom"></div>
-            <div class="separator-bottom"></div>
-            <div class="separator-bottom"></div>
-          </nav>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="index.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div class="icon ion-ios-home-outline"></div>
+                </div>
+                <div class="nav-menu-titles">HOME</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="Profile.php" data-load="1">
+                <div class="icon-list-menu">
+                  <div class="icon ion-ios-person-outline"></div>
+                </div>
+                <div class="nav-menu-titles">Profile</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="report.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div class="icon ion-ios-list-outline"></div>
+                </div>
+                <div class="nav-menu-titles">Reports</div>
+                <div class="nav-menu-text-right">1</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="chat.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div class="icon ion-ios-chatboxes-outline"></div>
+                </div>
+                <div class="nav-menu-titles">Chat</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="notification.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div><img src="icons/alarm.png"></div>
+                </div>
+                <div class="nav-menu-titles">Notifications</div>
+                <div class="nav-menu-text-right">5</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="articles.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div class="icon ion-ios-paper-outline"></div>
+                </div>
+                <div class="nav-menu-titles">Articles</div>
+                <div class="nav-menu-text-right">3</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="medicine.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div><img src="icons/medi.png"></div>
+                </div>
+                <div class="nav-menu-titles">My Medicine</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="Doctor.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div><img src="icons/doctor.png"></div>
+                </div>
+                <div class="nav-menu-titles">Your Doctor</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="Stages.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div><img src="icons/stages.png"></div>
+                </div>
+                <div class="nav-menu-titles">Pregnancy Stages</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="calender2.php" data-load="1">
+                <div class="icon-list-menu">
+                  <div><img src="icons/calendar.png"></div>
+                </div>
+                <div class="nav-menu-titles">Appointments</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="Location.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div class="icon ion-ios-location-outline"></div>
+                </div>
+                <div class="nav-menu-titles">Location</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link" href="about-us.html" data-load="1">
+                <div class="icon-list-menu">
+                <div class="icon ion-ios-gear-outline"></div>
+                </div>
+                <div class="nav-menu-titles">About the App</div>
+              </a>
+              <a class="w-clearfix w-inline-block nav-menu-link last" href="terms.html" data-load="1">
+                <div class="icon-list-menu">
+                  <div class="icon ion-ios-bookmarks-outline"></div>
+                </div>
+                <div class="nav-menu-titles">Terms and Conditions</div>
+              </a>
+              <div class="separator-bottom"></div>
+              <div class="separator-bottom"></div>
+              <div class="separator-bottom"></div>
+            </nav>
           <div class="wrapper-mask" data-ix="menu-mask"></div>
           <div class="navbar-title">REPORTS</div>
           <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
