--- a/Mom to be/Mom to be/addnew.html
+++ b/Mom to be/Mom to be/addnew.html
@@ -38,9 +38,9 @@ function goBack() {
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
           <div class="navbar-title">Add New Medecine</div>
-          <a class="w-inline-block navbar-button right bigger"  onclick="submit" data-load="1">
+          <!-- <a class="w-inline-block navbar-button right bigger"  onclick="submit" data-load="1">
             <div class="navbar-button-icon icon ion-ios-checkmark-empty"></div>
-          </a>
+          </a> -->
           <a class="w-inline-block navbar-button" onclick="goBack()"  data-load="1">
             <div class="navbar-button-icon icon ion-ios-close-empty"></div>
           </a>
@@ -139,6 +139,7 @@ function goBack() {
                 </div>
               </div>
               <div class="separator-fields"></div>
+              <input class="w-button action-button" type="submit" value="Add" data-wait="Please wait...">
             </div>
           </form>
           <div class="w-form-done">
