--- a/Mom to be/Mom to be/report.html
+++ b/Mom to be/Mom to be/report.html
@@ -157,7 +157,7 @@
             </div>
             <div class="w-tab-pane tab-pane" data-w-tab="Tab 2">
               <div class="group-block">
-                <a class="w-inline-block" href="news.html" data-load="1">
+                <a class="w-inline-block" href="Prescription.html" data-load="1">
                   <div class="group-image bg2"></div>
                   <div class="group-title">
                     <div class="title-text">Navidoxine</div>
@@ -165,7 +165,7 @@
                 </a>
               </div>
               <div class="group-block last">
-                <a class="w-inline-block" href="news.html" data-load="1">
+                <a class="w-inline-block" href="Prescription.html" data-load="1">
                   <div class="group-image bg3"></div>
                   <div class="group-title">
                     <div class="title-text">Folic Acid</div>
