--- a/Mom to be/Mom to be/Prescription.html
+++ b/Mom to be/Mom to be/Prescription.html
@@ -42,7 +42,7 @@
 
             <div class="text-new">
               <div class="separator-fields"></div>
-              <h2 class="title-new">Folic Acid</h2>
+              <h2 class="title-new"id="m1">Folic Acid</h2>
               <div class="separator-fields"></div><img src="images/Folic Acid.jpg">
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
@@ -57,26 +57,74 @@ Adult and teenage males—150 to 400 micrograms (mcg) per day.
 Adult and teenage females—150 to 400 mcg per day.
 Pregnant females—400 to 800 mcg per day.
 Breast-feeding females—260 to 800 mcg per day.</p>
-<p class="description-new"></p>
 <p class="description-new"><b>Side Effects</b></p>
 <p class="description-new">Along with its needed effects, a medicine may cause some unwanted effects. Although not all of these side effects may occur, if they do occur they may need medical attention. Check with your doctor as soon as possible if any of the following side effects occur while taking folic acid:
 Rare
-<ul>
+<ul class="description-new">
 <li>Fever</li>
 <li>general weakness or discomfort</li>
 <li>reddened skin</li>
 <li>shortness of breath</li>
 <li>skin rash or itching</li>
 <li>tightness in chest</li>
-<li>troubled breathing</li>	
+<li>troubled breathing</li>
 </ul></p>
+<p class="description-new"><b>Missed Dose</b></p>
+<p class="description-new">If you miss a dose of this medicine, skip the missed dose and go back to your regular dosing schedule. Do not double doses.</p>
+<p class="description-new"><b>Storage</b></p>
+<p class="description-new">Store the dietary supplement in a closed container at room temperature, away from heat, moisture, and direct light. Keep from freezing.
+Keep out of the reach of children.
+Do not keep outdated medicine or medicine no longer needed.</p>
+
               <div class="separator-button"></div>
 
-              <h2 class="title-new">Navidoxine</h2>
+              <h2 class="title-new" id="m2">Navidoxine</h2>
               <div class="separator-fields"></div><img src="images/Navidoxine.jpeg">
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
-              <p class="description-new">Most doctors recommend limiting caffeine during pregnancy, since it can have harmful effects on you and the baby. Cutting back can be tough, though -- especially when you're used to your morning java. For a quick pick-me-up, try nibbling on some fruit. "The natural sugars in fruits like bananas and apples can help lift energy levels," says registered dietitian Frances Largeman-Roth.</p>
+              <p class="description-new">Navidoxine Tablet is used for Pregnancy complications, Nausea due to motion sickness, Vomiting due to motion sickness, Dizziness due to motion sickness, Vertigo, Neurological disturbances and other conditions.
+Navidoxine Tablet contains Meclozine and Vitamin B6 as active ingredients.
+Navidoxine Tablet works by blocking the action of histamine; producing antibodies and hemoglobin by keeping blood sugar level in normal range;</p>
+<p class="description-new"></p>
+<p class="description-new"><b>Tablet Uses</b></p>
+<p class="description-new">Navidoxine Tablet is used for the treatment, control, prevention, & improvement of the following diseases, conditions and symptoms:
+<ul class="description-new">
+<li>Nausea due to motion sickness</li>
+<li>Vomiting due to motion sickness</li>
+<li>Dizziness due to motion sickness</li>
+<li>Vertigo</li>
+<li>Neurological disturbances</li>
+<li>Mental problems</li>
+<li>Anemia</li>
+<li>Convulsions</li>
+<li>Homocystinuria</li>
+Navidoxine Tablet may also be used for purposes not listed here.
+</ul></p>
+<p class="description-new"><b>Precautions & How to Use</b></p>
+<p class="description-new">Before using Navidoxine Tablet, inform your doctor about your current list of medications, over the counter products (e.g. vitamins, herbal supplements, etc.), allergies, pre-existing diseases, and current health conditions (e.g. pregnancy, upcoming surgery, etc.). Some health conditions may make you more susceptible to the side-effects of the drug. Take as directed by your doctor or follow the direction printed on the product insert. Dosage is based on your condition. Tell your doctor if your condition persists or worsens. Important counseling points are listed below.
+<ul class="description-new">
+<li>Pregnant, planning to get pregnant or breastfeeding</li>
+<li>avoid alcoholic beverages</li>
+<li>do not drive or operate machinery</li>
+<li>do not give it to children under the age of 12 years</li>
+</ul></p>
+<p class="description-new"><b>Side Effects</b></p>
+<p class="description-new">The following is a list of possible side-effects that may occur from all constituting ingredients of Navidoxine Tablet. This is not a comprehensive list. These side-effects are possible, but do not always occur. Some of the side-effects may be rare but serious. Consult your doctor if you observe any of the following side-effects, especially if they do not go away.
+<ul class="description-new">
+<li>Anaphylactoid reaction</li>
+<li>Drowsiness</li>
+<li>Dry mouth</li>
+<li>Headache</li>
+<li>Fatigue</li>
+<li>Vomiting</li>
+</ul></p>
+<p class="description-new">If you notice other side-effects not listed above, contact your doctor for medical advice. You may also report side-effects to your local food and drug administration authority.</p>
+              <p class="description-new"><b>Missed Dose</b></p>
+              <p class="description-new">If you miss a dose of this medicine, skip the missed dose and go back to your regular dosing schedule. Do not double doses.</p>
+              <p class="description-new"><b>Storage</b></p>
+              <p class="description-new">Store the dietary supplement in a closed container at room temperature, away from heat, moisture, and direct light. Keep from freezing.
+              Keep out of the reach of children.
+              Do not keep outdated medicine or medicine no longer needed.</p>
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
 
