--- a/Mom to be/Mom to be/Location.html
+++ b/Mom to be/Mom to be/Location.html
@@ -149,7 +149,7 @@
                 <br>e: info@w-hosoital.com
                 <br>t: 0123456 789</p>
               <div class="separator-button"></div>
-                <div class="separator-fields"></div><a class="action-button" href="#">Contact Us</a>
+                <div class="separator-fields"></div><a class="action-button" href="https://outlook.live.com">Contact Us</a>
               </div>
             </div>
           </div>
