--- a/Mom to be/Mom to be/about-us.html
+++ b/Mom to be/Mom to be/about-us.html
@@ -156,6 +156,15 @@
   </section>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/framework.js"></script>
+  <script>
+$(document).ready(function(){
+  setTimeout(function()
+  {
+    alert('Time to take your pills!');
+  },
+   4000);
+  });
+</script>
   <!--[if lte IE 9]><script src="js/placeholders.min.js"></script><![endif]-->
 </body>
 </html>
